--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: green;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -19,4 +19,34 @@
 
 .App-link {
   color: #09d3ac;
+}
+
+.NavBar {
+  background-color: #333;
+  width: 100%
+}
+
+.NavBar-ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+.NavBar-li {
+  float: left;
+}
+
+.NavBar-li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.NavBar-li a:hover {
+  background-color: #111;
 }
